--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EstateAgency Bootstrap Template - Index</title>
+  <title>RealEstate.al</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/realestate-logo.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -138,7 +138,8 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html">Estate<span class="color-b">Agency</span></a>
+
+      <a class="navbar-brand text-brand" href="index.html">Real<span class="color-b">Estate.al</span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -182,10 +183,11 @@
   </nav><!-- End Header/Navbar -->
 
   <!-- ======= Intro Section ======= -->
-  <div class="intro intro-carousel swiper position-relative">
+  <div class="intro">
 
     <div class="swiper-wrapper">
 
+      <!--
       <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-1.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
@@ -211,6 +213,10 @@
           </div>
         </div>
       </div>
+              -->
+
+
+       <!--
       <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-2.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
@@ -236,7 +242,9 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/slide-3.jpg)">
+    -->
+
+      <div class="swiper-slide carousel-item-a intro-item bg-image" style="background-image: url(assets/img/background1.jpg)">
         <div class="overlay overlay-a"></div>
         <div class="intro-content display-table">
           <div class="table-cell">
@@ -244,12 +252,12 @@
               <div class="row">
                 <div class="col-lg-8">
                   <div class="intro-body">
-                    <p class="intro-title-top">Doral, Florida
-                      <br> 78345
+                    <p class="intro-title-top">Durres, Albania
+                      <br> 2001
                     </p>
                     <h1 class="intro-title mb-4">
-                      <span class="color-b">204 </span> Alira
-                      <br> Roan Road One
+                      <span class="color-b">2001 </span> Durres
+                      <br> Bulevardi Epidamn
                     </h1>
                     <p class="intro-subtitle intro-price">
                       <a href="#"><span class="price-a">rent | $ 12.000</span></a>
@@ -266,6 +274,8 @@
   </div><!-- End Intro Section -->
 
   <main id="main">
+
+
 
     <!-- ======= Services Section ======= -->
     <section class="section-services section-t8">
