--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="col-md-12">
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
-                <h2 class="title-a">Our Services</h2>
+                <h2 class="title-a">Sherbimet</h2>
               </div>
             </div>
           </div>
@@ -297,20 +297,20 @@
                   <span class="bi bi-cart"></span>
                 </div>
                 <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Lifestyle</h2>
+                  <h2 class="title-c">Shitblerje</h2>
                 </div>
               </div>
               <div class="card-body-c">
                 <p class="content-c">
-                  Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                  convallis a pellentesque
-                  nec, egestas non nisi.
+                  RealEstate.al ofron shërbime të specializuara për shitjen dhe blerjen e pronave. Me një ekip të kualifikuar dhe njohuri të thellë në tregun e pasurive, ne ju asistojmë në gjetjen e pronës së ëndrrave tuaja për blerje, ose ndihmojmë në shitjen e pronës suaj aktuale me një proces të thjeshtë dhe të efektshëm.
                 </p>
               </div>
               <div class="card-footer-c">
-                <a href="#" class="link-c link-icon">Read more
+                <!--
+                <a href="readmore.html" target="_blank" class="link-c link-icon">Read more
                   <span class="bi bi-chevron-right"></span>
                 </a>
+              -->
               </div>
             </div>
           </div>
@@ -321,20 +321,22 @@
                   <span class="bi bi-calendar4-week"></span>
                 </div>
                 <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Loans</h2>
+                  <h2 class="title-c">Investime</h2>
                 </div>
               </div>
               <div class="card-body-c">
                 <p class="content-c">
-                  Nulla porttitor accumsan tincidunt. Curabitur aliquet quam id dui posuere blandit. Mauris blandit
-                  aliquet elit, eget tincidunt
-                  nibh pulvinar a.
+                  Nëse jeni të interesuar për investime në pasuri, RealEstate.al është partneri juaj i besueshëm. Ne ofrojmë këshillim dhe asistencë në identifikimin e mundësive më të mira të investimeve në pronat e paluajtshme, duke përdorur njohuritë tona të fundit në tregun e pasurive dhe analizat e turit të pasurive.
                 </p>
               </div>
               <div class="card-footer-c">
+
+                <!--
                 <a href="#" class="link-c link-icon">Read more
                   <span class="bi bi-calendar4-week"></span>
-                </a>
+                </a>-->
+
+
               </div>
             </div>
           </div>
@@ -345,20 +347,21 @@
                   <span class="bi bi-card-checklist"></span>
                 </div>
                 <div class="card-title-c align-self-center">
-                  <h2 class="title-c">Sell</h2>
+                  <h2 class="title-c">Qira</h2>
                 </div>
               </div>
               <div class="card-body-c">
                 <p class="content-c">
-                  Sed porttitor lectus nibh. Cras ultricies ligula sed magna dictum porta. Praesent sapien massa,
-                  convallis a pellentesque
-                  nec, egestas non nisi.
+                  Shërbimi i qirave në RealEstate.al është i fokusuar në arritjen e një marrëdhënie të qëndrueshme mes qiradhënësit dhe qiraxhinjve. Ne ju ndihmojmë të gjeni ose ofroni pronat për qira, duke siguruar një proces të shpejtë, të saktë dhe të drejtë për të dyja palët.
                 </p>
               </div>
               <div class="card-footer-c">
+                <!--
                 <a href="#" class="link-c link-icon">Read more
                   <span class="bi bi-chevron-right"></span>
-                </a>
+                </a>-->
+
+
               </div>
             </div>
           </div>
@@ -373,10 +376,10 @@
           <div class="col-md-12">
             <div class="title-wrap d-flex justify-content-between">
               <div class="title-box">
-                <h2 class="title-a">Latest Properties</h2>
+                <h2 class="title-a">Pronat e fundit</h2>
               </div>
               <div class="title-link">
-                <a href="property-grid.html">All Property
+                <a href="property-grid.html">Te gjitha pronat
                   <span class="bi bi-chevron-right"></span>
                 </a>
               </div>
@@ -386,11 +389,12 @@
 
         <div id="property-carousel" class="swiper">
           <div class="swiper-wrapper">
+            
 
             <div class="carousel-item-b swiper-slide">
               <div class="card-box-a card-shadow">
                 <div class="img-box-a">
-                  <img src="assets/img/property-6.jpg" alt="" class="img-a img-fluid">
+                  <img src="assets/img/apartament-tirane.jpg" alt="" class="img-a img-fluid">
                 </div>
                 <div class="card-overlay">
                   <div class="card-overlay-a-content">
